--- a/css/reserve_form.css
+++ b/css/reserve_form.css
@@ -1,6 +1,8 @@
+body {
+    background-color: #f1f2eb;
+}
 section {
     font-family: 'PT Sans', Arial, Helvetica, sans-serifr;
-    background-color: #f1f2eb;
 }
 section > h2 {
     font-size: 30px;
