--- a/css/general.css
+++ b/css/general.css
@@ -5,7 +5,7 @@ header {
     margin: 0px;
 }
 header > div#navigation {
-    background-color: #75462f;
+    background-color: #75462f !important;
     display: flex;
 	width: 100%;
     height: 5%;
@@ -37,7 +37,7 @@ header img {
 /*footer*/
 footer {
     height: 5%;
-    background-color: #75462f;
+    background-color: #75462f !important;
 }
 footer > div {
     background-color: #75462f;
