--- a/css/reserve_form.css
+++ b/css/reserve_form.css
@@ -1,8 +1,6 @@
-body {
-    background-color: #f1f2eb;
-}
 section {
-    font-family: 'PT Sans', Arial, Helvetica, sans-serifr;
+    font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+    background-color: #f1f2eb;
     padding-bottom: 10px;
 }
 section > h2 {
@@ -16,7 +14,6 @@ form#contactInfoData {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px;
 }
 
 fieldset > legend {
